Barrinha agr é preta

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header id="header">
     <div class="container">
       <div id="logo" class="pull-left">
-        <a href="#hero"><h3 style="color:rgb(0, 0, 0);">Unique</h3></a>
+        <a href="#hero"><h3 style="color:rgb(255, 255, 255);">Unique</h3></a>
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
@@ -102,7 +102,7 @@
               <h4>Tiago Oliveira</h4>
               <span></span>
               <div class="social">
-                <a href="https://twitter.com/LulaOficial"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/LulaOficial" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
