--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Ticket to Ride</h1>
-      <h2>Passagens rodoviárias digitais</h2>
+      <h2>Passagens Rodoviárias Digitais</h2>
       <a href="login.html" class="btn-get-started">Fazer Login</a>
     </div>
   </section>
@@ -43,25 +43,25 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <h2 class="title">Sobre o aplicativo</h2>
             <p>
-               Ticket to Ride é...
+               <i>Ticket to Ride</i> é o primeiro aplicativo de passagem rodoviária digital no Brasil!!
             </p>
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-ticket"></i></div>
               <h4 class="title"><a href="">Custo-benefício</a></h4>
-              <p class="description">Viagens mais...</p>
+              <p class="description">Viagens mais baratas e na palma da sua mão</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-bus"></i></div>
               <h4 class="title"><a href="">Sua viagem mais dinâmica</a></h4>
-              <p class="description">Praticidade e...</p>
+              <p class="description">Praticidade e conforto a toda hora</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-clock-o"></i></div>
               <h4 class="title"><a href="">Tempo reduzido</a></h4>
-              <p class="description">Rapidez e...</p>
+              <p class="description">Rapidez e dinamismo na sua viagem</p>
             </div>
 
           </div>
